--- a/index.html
+++ b/index.html
@@ -745,7 +745,7 @@
                                                     </div>
                                                     <div class="play-bottom">
                                                         <a href="">
-                                                        <img src="/codigo videos/logo.png" alt="">
+                                                        <img src="logo.png" alt="">
                                                         <span class="list"><i class="fa-solid fa-list-check"></i></span>
                                                          <h2>The video titulo</h2>
                                                          <p><i class="fa-solid fa-list-check"></i></p>
@@ -753,7 +753,7 @@
                                                     </div>
                                                     <div class="play-bottom">
                                                         <a href="">
-                                                        <img src="/codigo videos/logo.png" alt="">
+                                                        <img src="logo.png" alt="">
                                                         <span class="list"><i class="fa-solid fa-list-check"></i></span>
                                                          <h2>The video titulo</h2>
                                                          <p><i class="fa-solid fa-list-check"></i></p>
@@ -856,7 +856,7 @@
                                                                 </a>
                                                                 <div class="video-details-canal">
                                                                     <a href="">
-                                                                    <img src="/codigo videos/logo.png" alt="">
+                                                                    <img src="logo.png" alt="">
                                                                     <span>The videos</span>
                                                                     <p>V</p>
                                                                     </a>
@@ -911,7 +911,7 @@
                                                                     </div><!--CONTAINER VIDEOS-->
                                                     
                                                                     <div class="container-videos">
-                                                                        <a href="/codigo videos/video.html">
+                                                                        <a href="video.html">
                                                                         <div class="video-img">
                                                                             <img src="https://t.ctcdn.com.br/BKiFNvyVhajUjXDoq67jZbLuYpk=/1200x675/smart/i640757.jpeg" alt="">
                                                                             <span class="minuto-video">5:49 min</span>
@@ -945,7 +945,7 @@
                                                                                 </a>
                                                                                 <div class="video-details-canal">
                                                                                     <a href="">
-                                                                                    <img src="/codigo videos/logo.png" alt="">
+                                                                                    <img src="logo.png" alt="">
                                                                                     <span>The videos</span>
                                                                                     <p>V</p>
                                                                                </a>
