--- a/video.html
+++ b/video.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>video</title>
-    <link rel="icon" href="/codigo videos/logo.png">
+    <link rel="icon" href="logo.png">
     <link rel="stylesheet" href="video.css">
 </head>
 <body>
